--- a/backend/package.json
+++ b/backend/package.json
@@ -23,3 +23,11 @@
 		"socket.io": "^4.7.5"
 	}
 }
+{
+  "name": "my-package",
+  "scripts": {
+    "build": "babel src -d lib",
+    "test": "jest"
+  }
+}
+
